--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -2,7 +2,7 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'lawabidingcactus/tmux-gruvbox-truecolor'
-set -g @plugin 'rose-pine/tmux'
+# set -g @plugin 'rose-pine/tmux'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
